# cse4310

cv_containers/build_clickable/: CMakeCache.txt  Makefile  cmake_install.cmake  cv_clickable
cv_containers/build_containers/: CMakeCache.txt  Makefile  cmake_install.cmake  cv_containers
cv_hw/hw1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  program1  program1.cpp
cv_hw/hw2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  program2  program2.cpp  temp.cpp
cv_hw/hw3/app1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  program3  program3.cpp
cv_hw/hw3/app2/: CMakeCache.txt  Makefile  cmake_install.cmake  cv_pmog  cv_pmog.cpp
cv_hw/hw3/app3/: CMakeCache.txt  Makefile  cmake_install.cmake  cv_pmog  cv_pmog.cpp
cv_hw/hw4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  output.pcd  output2.pcd  output_hemisphere.pcd  output_miniplane.pcd  output_plane_1.pcd  output_plane_2.pcd  pcl_headless  pcl_headless.cpp  program4  program4.cpp  temp.cpp  test.pcd  yolo.cpp
cv_tracking/: CMakeCache.txt  Makefile  cmake_install.cmake  cv_tracking
pcl_plane/: tabletop.pcd
